--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,69 @@
 [tox]
-envlist = py311
+envlist = pep8,coverage,py311
 parallel = 1
 isolated_build = True
 
 [testenv]
 deps =
     asgiref==3.8.1
+    cachetools==5.5.2
     certifi==2025.1.31
+    chardet==5.2.0
     charset-normalizer==3.4.1
-    Django==5.1
+    colorama==0.4.6
+    distlib==0.3.9
+    Django==5.1.7
     djangorestframework==3.15.2
+    filelock==3.17.0
+    flake8==7.1.2
     idna==3.10
+    mccabe==0.7.0
+    packaging==24.2
+    platformdirs==4.3.6
+    pluggy==1.5.0
+    pycodestyle==2.12.1
+    pyflakes==3.2.0
+    pyproject-api==1.9.0
     requests==2.32.3
     sqlparse==0.5.3
+    tox==4.24.2
     urllib3==2.3.0
+    virtualenv==20.29.3
+    bandit==1.8.3
+    coverage==7.6.12
 
-
-;install_command = pip install --no-cache-dir --pre {[testenv]artifactory_config} {opts} {packages}
-
-commands =
-    python3.11 manage.py test
 setenv =
     PYTHONPATH = {toxinidir}
     DJANGO_SETTINGS_MODULE = my_currency.settings
     DATABASE_URL = sqlite:///:memory:
+
+[testenv:pep8]
+commands = flake8
+ignore = E722
+distribute = false
+
 
 [testenv:coverage]
 deps =
     {[testenv]deps}
     coverage
 commands =
-    coverage run --source=exchange manage.py test
+    coverage run manage.py test
     coverage report
+
+[flake8]
+# Ignored style checks
+# F401 imported but unused
+# H404 multi line docstring should start without a leading new line
+# H301 one import per line
+# H405 multi line docstring summary not separated with an empty line
+# F403 import *' used; unable to detect undefined names
+# H306 imports not in alphabetical order
+# H238 old style class declaration, use new style (inherit from `object`)
+# F841 local variable '' is assigned to but never used
+# H201 no 'except:' at least use 'except Exception:'
+# F999 star imports
+max-line-length = 119
+ignore = F401,H404,H301,H405,F403,H306,H238,F841,H201,F999,W605,W504,W503
+show-source = true
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools,build,*migrations*,*static*
